# ox

./: .gitignore  AGENTS.md  BRAND_BOOK.md  Cargo.toml  LICENSE  README.md  TODO.md  coverage.toml  ox-dev-server.toml
.clash/: policy.json
crates/ox-broker/: Cargo.toml
crates/ox-broker/src/: async_store.rs  broker.rs  client.rs  lib.rs  server.rs  sync_adapter.rs  types.rs
crates/ox-cli/: Cargo.toml  build.rs
crates/ox-cli/src/: action_executor.rs  agents.rs  app.rs  bindings.rs  broker_cmd.rs  broker_setup.rs  clash_sandbox.rs  commit_drain.rs  config.rs  dialogs.rs  dispatch.rs  editor.rs  editor_snapshots.rs  event_loop.rs  focus.rs  history_state.rs  history_view.rs  inbox_shell.rs  inbox_view.rs  key_encode.rs  key_handlers.rs  lib.rs  main.rs  parse.rs  policy.rs  policy_check.rs  session.rs  settings_shell.rs  settings_state.rs  settings_view.rs  shell.rs  simple_input.rs  state_sync.rs  tab_bar.rs  test_support.rs  text_input_view.rs  text_pane.rs  theme.rs  thread_mount.rs  thread_registry.rs  (+8 more)
crates/ox-cli/src/snapshots/: ox__editor_snapshots__tests__backspace_then_render.snap  ox__editor_snapshots__tests__command_line_empty.snap  ox__editor_snapshots__tests__command_line_with_long_command.snap  ox__editor_snapshots__tests__command_line_with_q.snap  ox__editor_snapshots__tests__command_line_with_wq.snap  ox__editor_snapshots__tests__cursor_at_start.snap  ox__editor_snapshots__tests__empty_editor.snap  ox__editor_snapshots__tests__empty_editor_compose_mode.snap  ox__editor_snapshots__tests__empty_editor_normal_indicator.snap  ox__editor_snapshots__tests__empty_editor_reply_mode.snap  ox__editor_snapshots__tests__insert_text_then_render.snap  ox__editor_snapshots__tests__insert_then_esc_to_normal.snap  ox__editor_snapshots__tests__lifecycle_1_after_typing.snap  ox__editor_snapshots__tests__lifecycle_2_normal_mode.snap  ox__editor_snapshots__tests__lifecycle_3_after_h.snap  ox__editor_snapshots__tests__lifecycle_4_command_prompt.snap  ox__editor_snapshots__tests__lifecycle_5_command_q.snap  ox__editor_snapshots__tests__multiline_content.snap  ox__editor_snapshots__tests__normal_mode_after_hjkl.snap  ox__editor_snapshots__tests__scroll_indicator_cursor_at_bottom.snap  ox__editor_snapshots__tests__scroll_indicator_when_overflowing.snap  ox__editor_snapshots__tests__soft_wrap_long_line.snap
crates/ox-cli/tests/: crash_harness_approval_resume.rs  crash_harness_cross_phase.rs  crash_harness_durable_stream.rs  crash_harness_post_crash_reconfirm.rs  crash_harness_smoke.rs
crates/ox-cli/tests/crash_harness/: README.md  mod.rs
crates/ox-context/: Cargo.toml  README.md
crates/ox-context/src/: lib.rs
crates/ox-core/: Cargo.toml  README.md
crates/ox-core/src/: lib.rs
crates/ox-dev-server/: Cargo.toml
crates/ox-dev-server/src/: main.rs
crates/ox-emscripten/: Cargo.toml
crates/ox-emscripten/src/: lib.rs
crates/ox-gate/: Cargo.toml
crates/ox-gate/src/: account.rs  lib.rs  pricing.rs  provider.rs  tools.rs
crates/ox-gate/src/codec/: anthropic.rs  mod.rs  openai.rs
crates/ox-history/: Cargo.toml  README.md
crates/ox-history/src/: lib.rs  turn.rs
crates/ox-inbox/: Cargo.toml
crates/ox-inbox/src/: file_backing.rs  jsonl.rs  ledger.rs  ledger_writer.rs  lib.rs  model.rs  pagination.rs  reader.rs  reconcile.rs  schema.rs  search.rs  snapshot.rs  thread_dir.rs  writer.rs
crates/ox-kernel/: Cargo.toml  README.md
crates/ox-kernel/src/: backing.rs  lib.rs  log.rs  path_component.rs  resume.rs  run.rs  snapshot.rs
crates/ox-kernel/tests/: oxpath_compile_tests.rs
crates/ox-kernel/tests/compile_fail/: oxpath_rejects_dot_prefix.rs  oxpath_rejects_dot_prefix.stderr  oxpath_rejects_empty.rs  oxpath_rejects_empty.stderr  oxpath_rejects_hyphen.rs  oxpath_rejects_hyphen.stderr  oxpath_rejects_space.rs  oxpath_rejects_space.stderr
crates/ox-path/: Cargo.toml
crates/ox-path/src/: lib.rs
crates/ox-runtime/: Cargo.toml
crates/ox-runtime/src/: bridge.rs  engine.rs  host_store.rs  lib.rs
crates/ox-store-util/: Cargo.toml
crates/ox-store-util/src/: cascade.rs  lib.rs  local_config.rs  masked.rs  read_only.rs
crates/ox-tools/: Cargo.toml
crates/ox-tools/src/: completion.rs  fs.rs  lib.rs  name_map.rs  native.rs  os.rs  policy_store.rs  sandbox.rs  turn.rs
crates/ox-tools/tests/: fs_integration.rs  os_integration.rs  toolstore_integration.rs
crates/ox-types/: Cargo.toml
crates/ox-types/src/: approval.rs  command.rs  command_name.rs  editor.rs  inbox.rs  input.rs  key_hint.rs  lib.rs  snapshot.rs  turn.rs  ui.rs
crates/ox-types/tests/: serde_roundtrip.rs
crates/ox-ui/: Cargo.toml
crates/ox-ui/src/: approval_store.rs  builtin_commands.rs  command.rs  command_def.rs  command_line_store.rs  command_registry.rs  command_store.rs  config_store.rs  input_store.rs  lib.rs  text_input_store.rs  ui_store.rs
crates/ox-wasi/: Cargo.toml
crates/ox-wasi/src/: lib.rs
crates/ox-wasm/: Cargo.toml
crates/ox-wasm/src/: lib.rs  wasm_subscriber.rs
crates/ox-web/: Cargo.toml  README.md
crates/ox-web/src/: lib.rs
crates/ox-web/static/: index.html
crates/ox-web/ui/: package.json  svelte.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts
crates/ox-web/ui/src/: app.css  app.d.ts  app.html  chat.ts  connection.ts  debugger.ts  dom-helpers.test.ts  dom-helpers.ts  dom.ts  main.ts  request-log.ts  status.ts  test-setup.ts  theme.test.ts  theme.ts  tool-compiler.test.ts  tool-compiler.ts  tool-panel.ts  tool-store.test.ts  tool-store.ts  types.ts  wasm.d.ts
crates/ox-web/ui/src/lib/: theme-data.ts  tool-compiler.test.ts  wasm.d.ts
crates/ox-web/ui/src/lib/components/: ApiKeyModal.svelte  Chat.svelte  DebugPanel.svelte  InputRow.svelte  ModelSelector.svelte  RequestLog.svelte  SettingsModal.svelte  StatusBar.svelte  ThemePicker.svelte  ToolPanel.svelte
crates/ox-web/ui/src/lib/stores/: agent.ts  api-keys.test.ts  api-keys.ts  chat.ts  request-log.ts  status.ts  theme.test.ts  theme.ts  tools.test.ts  tools.ts  usage.test.ts  usage.ts
crates/ox-web/ui/src/routes/: +layout.svelte  +page.svelte
crates/ox-web/ui/styles/: main.css
(+106 files in other folders)
