[workspace]
resolver = "2"
members = [
    "crates/ox-core",
    "crates/ox-context",
    "crates/ox-dev-server",
    "crates/ox-emscripten",
    "crates/ox-history",
    "crates/ox-kernel",
    "crates/ox-wasi",
    "crates/ox-web",
]

[workspace.dependencies]
structfs-core-store = { git = "https://github.com/StructFS/structfs" }
structfs-serde-store = { git = "https://github.com/StructFS/structfs" }
