[workspace]
resolver = "2"
members = [
    "crates/ox-core",
    "crates/ox-context",
    "crates/ox-dev-server",
    "crates/ox-emscripten",
    "crates/ox-history",
    "crates/ox-kernel",
    "crates/ox-wasi",
    "crates/ox-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/freeoxen/ox"
homepage = "https://freeoxen.github.io/ox/"
authors = ["Adjective Noun, LLC"]

[workspace.dependencies]
structfs-core-store = { git = "https://github.com/StructFS/structfs" }
structfs-serde-store = { git = "https://github.com/StructFS/structfs" }
