[workspace]
resolver = "2"
members = [
    "crates/ox-core",
    "crates/ox-context",
    "crates/ox-dev-server",
    "crates/ox-emscripten",
    "crates/ox-gate",
    "crates/ox-history",
    "crates/ox-kernel",
    "crates/ox-wasm",
    "crates/ox-web",
    "crates/ox-cli",
    "crates/ox-inbox",
    "crates/ox-runtime",
    "crates/ox-broker",
    "crates/ox-ui",
    "crates/ox-store-util",
    "crates/ox-path",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/freeoxen/ox"
homepage = "https://freeoxen.github.io/ox/"
authors = ["Adjective Noun, LLC"]

[workspace.dependencies]
structfs-core-store = { git = "https://github.com/StructFS/structfs" }
structfs-serde-store = { git = "https://github.com/StructFS/structfs" }
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing = "0.1"
