[package]
name = "ox-broker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Async BrokerStore for StructFS — routes reads/writes between stores by path prefix"
readme = "README.md"
keywords = ["agent", "ai", "structfs", "broker", "async"]
categories = ["data-structures", "asynchronous"]

[dependencies]
tracing = { workspace = true }
ox-path = { path = "../ox-path" }
serde = { version = "1", features = ["derive"] }
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
