[package]
name = "ox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Ratatui-based agentic coding CLI for the ox agent framework"
publish = false

[[bin]]
name = "ox"
path = "src/main.rs"

[dependencies]
ox-kernel = { path = "../ox-kernel" }
ox-context = { path = "../ox-context" }
ox-gate = { path = "../ox-gate" }
ox-history = { path = "../ox-history" }
ox-runtime = { path = "../ox-runtime" }
ox-inbox = { path = "../ox-inbox" }
ox-broker = { path = "../ox-broker" }
ox-ui = { path = "../ox-ui" }
ox-store-util = { path = "../ox-store-util" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking"] }
clash = "0.6"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }

[dev-dependencies]
tempfile = "3"
