[package]
name = "ox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Ratatui-based agentic coding CLI for the ox agent framework"
publish = false

[lib]
name = "ox_cli"
path = "src/lib.rs"

[[bin]]
name = "ox"
path = "src/main.rs"

[dependencies]
ox-path = { path = "../ox-path" }
ox-kernel = { path = "../ox-kernel" }
ox-context = { path = "../ox-context" }
ox-gate = { path = "../ox-gate" }
ox-history = { path = "../ox-history" }
ox-runtime = { path = "../ox-runtime" }
ox-inbox = { path = "../ox-inbox" }
ox-broker = { path = "../ox-broker" }
ox-ui = { path = "../ox-ui" }
ox-store-util = { path = "../ox-store-util" }
ox-tools = { path = "../ox-tools" }
ox-types = { path = "../ox-types" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["blocking"] }
clash = "0.6"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
insta = "1"
libc = "0.2"
# Crash-harness #[tokio::test]s need rt-multi-thread + macros.
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
