[package]
name = "ox-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Namespace store router and providers for the ox agent framework"
readme = "README.md"
keywords = ["agent", "ai", "namespace", "structfs", "routing"]
categories = ["data-structures"]

[dependencies]
tracing = { workspace = true }
ox-kernel = { path = "../ox-kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }

[dev-dependencies]
ox-gate = { path = "../ox-gate" }
ox-history = { path = "../ox-history" }
