[package]
name = "ox-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Agent composition for the ox framework — wires kernel, namespace, and stores"
readme = "README.md"
keywords = ["agent", "ai", "llm", "agentic", "tools"]
categories = ["api-bindings"]

[dependencies]
ox-kernel = { path = "../ox-kernel" }
ox-context = { path = "../ox-context" }
ox-gate = { path = "../ox-gate" }
ox-history = { path = "../ox-history" }
ox-tools = { path = "../ox-tools" }
serde_json = "1"
structfs-serde-store = { workspace = true }
