[package]
name = "ox-dev-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ox-dev-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
