[package]
name = "ox-dev-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ox-dev-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
