[package]
name = "ox-emscripten"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Emscripten target shell for the ox agent framework (stub)"
publish = false

[dependencies]
ox-core = { path = "../ox-core" }
