[package]
name = "ox-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "StructFS-native LLM transport layer — codecs, provider registry, and completion protocol"
readme = "README.md"
keywords = ["agent", "ai", "llm", "structfs", "transport"]
categories = ["api-bindings"]

[dependencies]
ox-kernel = { path = "../ox-kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }
