[package]
name = "ox-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Conversation history as a StructFS store for the ox agent framework"
readme = "README.md"
keywords = ["agent", "ai", "history", "structfs", "conversation"]
categories = ["data-structures"]

[dependencies]
ox-kernel = { path = "../ox-kernel" }
ox-types = { path = "../ox-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }
