[package]
name = "ox-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core types, state machine, and agentic loop for the ox agent framework"
readme = "README.md"
keywords = ["agent", "ai", "llm", "structfs", "tools"]
categories = ["data-structures", "api-bindings"]

[dependencies]
tracing = { workspace = true }
ox-store-util = { path = "../ox-store-util" }
ox-path = { path = "../ox-path" }
ox-types = { path = "../ox-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }

[dev-dependencies]
trybuild = "1"
