[package]
name = "ox-path"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Proc macro for compile-time validated StructFS paths"
publish = false

[lib]
proc-macro = true

[dependencies]
unicode-ident = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
