[package]
name = "ox-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Wasmtime-based agent runtime for ox"

[dependencies]
tracing = { workspace = true }
ox-kernel = { path = "../ox-kernel" }
ox-path = { path = "../ox-path" }
ox-context = { path = "../ox-context" }
ox-history = { path = "../ox-history" }
ox-gate = { path = "../ox-gate" }
ox-tools = { path = "../ox-tools" }
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }
serde = "1"
serde_json = "1"
wasmtime = "29"

[dev-dependencies]
tempfile = "3"
