[package]
name = "ox-store-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
tracing = { workspace = true }
structfs-core-store.workspace = true
