[package]
name = "ox-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "UI stores for ox — state machines driven by StructFS command protocol"

[dependencies]
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }

[dev-dependencies]
ox-broker = { path = "../ox-broker" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "rt-multi-thread"] }
