[package]
name = "ox-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "UI stores for ox — state machines driven by StructFS command protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }
ox-broker = { path = "../ox-broker" }
ox-types = { path = "../ox-types" }
ox-path = { path = "../ox-path" }
ox-store-util = { path = "../ox-store-util" }
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "rt-multi-thread"] }
