[package]
name = "ox-wasi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WASI target shell for the ox agent framework (stub)"
publish = false

[dependencies]
ox-core = { path = "../ox-core" }
