[package]
name = "ox-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Ox agent as a Wasm module — drives the kernel loop via host StructFS imports"
publish = false

[dependencies]
ox-kernel = { path = "../ox-kernel" }
structfs-core-store = { workspace = true }
structfs-serde-store = { workspace = true }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
