[package]
name = "ox-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ox-core = { path = "../ox-core" }
ox-context = { path = "../ox-context" }
ox-history = { path = "../ox-history" }
ox-kernel = { path = "../ox-kernel" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
structfs-serde-store = { workspace = true }
